syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.livraria";
option java_outer_classname = "Biblioteca";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package com.livraria;

service BibliotecaService {
  rpc cadastraLivro (BibliotecaRequest) returns (BibliotecaResponse) {}
}

message BibliotecaRequest {
  string nome = 1;
  string descricao=2;
  double preco=3;
  google.protobuf.Timestamp dataLancamento=4;

}

message BibliotecaResponse {
  string nome = 1;
  string descricao=2;
  double preco=3;
  google.protobuf.Timestamp dataLancamento=4;
  string isbnGerado=5;
}